--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,7 +35,30 @@
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
-    @if (isLoadingFiltered() && isFilterActive()) {
+    @if (isInitialLoading()) {
+      <div class="projects-feed">
+        @for (i of [1,2,3]; track i) {
+          <ion-card class="project-skeleton">
+            <ion-card-header>
+              <div class="skeleton-header">
+                <ion-skeleton-text [animated]="true" style="width: 40px; height: 40px; border-radius: 50%;"></ion-skeleton-text>
+                <div class="skeleton-header-text">
+                  <ion-skeleton-text [animated]="true" style="width: 120px; height: 16px;"></ion-skeleton-text>
+                  <ion-skeleton-text [animated]="true" style="width: 80px; height: 12px; margin-top: 4px;"></ion-skeleton-text>
+                </div>
+              </div>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-skeleton-text [animated]="true" style="width: 60%; height: 20px; margin-bottom: 8px;"></ion-skeleton-text>
+              <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
+              <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
+              <ion-skeleton-text [animated]="true" style="width: 80%; height: 14px; margin-bottom: 12px;"></ion-skeleton-text>
+              <ion-skeleton-text [animated]="true" style="width: 100%; height: 200px; border-radius: 8px;"></ion-skeleton-text>
+            </ion-card-content>
+          </ion-card>
+        }
+      </div>
+    } @else if (isLoadingFiltered() && isFilterActive()) {
       <div class="loading-state">
         <ion-spinner name="crescent"></ion-spinner>
         <p>{{ 'COMMON.LOADING' | translate }}</p>
