--- a/src/theme/shared-project-styles.scss
+++ b/src/theme/shared-project-styles.scss
@@ -9,7 +9,7 @@
 }
 
 .project-description {
-  margin: 4px 1px 20px 0px !important;
+  margin-top: 8px !important;
   padding-left: 8px;
   border-left: 2px solid var(--ion-color-primary);
   font-size: 15px !important;
@@ -61,7 +61,7 @@
 }
 
 .project-needs {
-  margin: 12px 0;
+  margin: 12px 0 0 0;
   
   .needs-list {
     margin: 0;
