--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -17,9 +17,9 @@
     <div class="right-column">
       <ion-card-header class="project-header">
         <div class="project-title-section">
-          <h3 class="project-title">
+          <div class="project-title">
             <span class="title-text">{{ project().title }}</span>
-          </h3>
+          </div>
         </div>
       </ion-card-header>
 
