--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -39,22 +39,27 @@
       <div class="projects-feed">
         @for (i of [1,2,3]; track i) {
           <ion-card class="project-skeleton">
-            <ion-card-header>
-              <div class="skeleton-header">
-                <ion-skeleton-text [animated]="true" style="width: 40px; height: 40px; border-radius: 50%;"></ion-skeleton-text>
-                <div class="skeleton-header-text">
-                  <ion-skeleton-text [animated]="true" style="width: 120px; height: 16px;"></ion-skeleton-text>
-                  <ion-skeleton-text [animated]="true" style="width: 80px; height: 12px; margin-top: 4px;"></ion-skeleton-text>
-                </div>
+            <div class="skeleton-card-layout">
+              <!-- Left Column Skeleton -->
+              <div class="skeleton-left-column">
+                <ion-skeleton-text [animated]="true" style="width: 30px; height: 20px; border-radius: 8px; margin-bottom: 12px;"></ion-skeleton-text>
+                <ion-skeleton-text [animated]="true" style="width: 20px; height: 20px; border-radius: 50%; margin-bottom: 12px;"></ion-skeleton-text>
+                <ion-skeleton-text [animated]="true" style="width: 20px; height: 20px; border-radius: 50%;"></ion-skeleton-text>
               </div>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-skeleton-text [animated]="true" style="width: 60%; height: 20px; margin-bottom: 8px;"></ion-skeleton-text>
-              <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
-              <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
-              <ion-skeleton-text [animated]="true" style="width: 80%; height: 14px; margin-bottom: 12px;"></ion-skeleton-text>
-              <ion-skeleton-text [animated]="true" style="width: 100%; height: 200px; border-radius: 8px;"></ion-skeleton-text>
-            </ion-card-content>
+              
+              <!-- Right Column Skeleton -->
+              <div class="skeleton-right-column">
+                <ion-card-header class="skeleton-header">
+                  <ion-skeleton-text [animated]="true" style="width: 80%; height: 20px; margin-bottom: 8px;"></ion-skeleton-text>
+                </ion-card-header>
+                <ion-card-content class="skeleton-content">
+                  <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
+                  <ion-skeleton-text [animated]="true" style="width: 100%; height: 14px; margin-bottom: 4px;"></ion-skeleton-text>
+                  <ion-skeleton-text [animated]="true" style="width: 80%; height: 14px; margin-bottom: 12px;"></ion-skeleton-text>
+                  <ion-skeleton-text [animated]="true" style="width: 100%; height: 200px; border-radius: 8px;"></ion-skeleton-text>
+                </ion-card-content>
+              </div>
+            </div>
           </ion-card>
         }
       </div>
